# ImWalikingHereNG

./: CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
cmake/: XSEPlugin.cmake
cmake/ports/autotoml/: portfile.cmake  vcpkg.json
data/: ImWalkinHere.toml
src/: CMakeLists.txt  CollisionHandler.cpp  CollisionHandler.h  Events.h  Hooks.h  PCH.h  Settings.h  main.cpp
